# MiniPainterPreview

./: CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mini_painter_jni.cpp
app/src/main/java/com/example/minipainter/: MainActivity.kt
app/src/main/java/com/example/minipainter/data/: MiniProjectModels.kt  MiniProjectRepository.kt
app/src/main/java/com/example/minipainter/native/: MiniPainterNative.kt
app/src/main/java/com/example/minipainter/nativebridge/: MiniPainterNative.kt
app/src/main/java/com/example/minipainter/navigation/: AppRoutes.kt  MiniPainterNavGraph.kt  MiniPainterNavHost.kt  NavRoutes.kt
app/src/main/java/com/example/minipainter/ui/screens/: CaptureScreen.kt  HomeScreen.kt  PaintScreen.kt  PreviewScreen.kt  ProjectDetailScreen.kt
app/src/main/java/com/example/minipainter/viewmodel/: CaptureViewModel.kt  HomeViewModel.kt  MiniPainterViewModelFactory.kt  ProjectViewModel.kt  ViewModelFactories.kt
app/src/main/res/values/: themes.xml
include/mini_painter/: mini_painter.h
src/: c_api.cpp  project_store.cpp  project_store.hpp
src/cli/: main.cpp
tests/: test_project.cpp
